Fix dots overflowing body

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -27,7 +27,7 @@
       clip-path: $clip-path;
       content: '';
       height: 100%;
-      left: calc(50% + 2px);
+      left: 50%;
       position: absolute;
       top: 0;
       transform: translateX(-50%);
